--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,4 +1,4 @@
-.form {
+.container{
   padding: 50px;
 
   label {
@@ -6,6 +6,7 @@
     display: inline-block;
     font-weight: 600;
     padding-right: 8px;
+    padding-top: 4px;
   }
 
   input {
@@ -15,7 +16,20 @@
 }
 
 .wrapper {
-  padding-bottom: 10px;
+  padding-bottom: 14px;
   display: flex;
-  align-items: center;
+}
+
+.inputWrap {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.error {
+  color: red;
+  font-size: 0.6rem;
+  padding-top: 2px;
+  position: absolute;
+  top: 25px;
 }
